@@ -8,6 +8,7 @@ Changes in JMurmel-1.4 relative to JMurmel-1.3.1
  * added the functions "write-to-string", "write-lines", "write-string"
  * added the special form "try" and the function "typep"
  * added condition types, the global variable *condition-handler* and some condition handling
+ * added hash-tables
 
  * mlib: added the functions parse, parse-integer, min, max,
    string-replace, string-split, string-join
